# duckdb-extension-httpserver

./: .gitignore  CMakeLists.txt  Makefile  embed.cmake  extension_config.cmake  requirements.txt
.github/workflows/: MainDistributionPipeline.yml
docs/: DISCOVERY.md  README.md
http_api/: client.py  conftest.py  test_json_compact_all_types.py
src/: discovery.cpp  duck_flock.cpp  httpserver_extension.cpp  result_serializer.cpp
src/assets/: index.html
src/http_handler/: authentication.cpp  bindings.cpp  handler.cpp  response_serializer.cpp
src/include/: discovery.hpp  httpserver_extension.hpp  play.h  query_stats.hpp  result_serializer.hpp  result_serializer_compact_json.hpp
src/include/httpserver_extension/: http_handler.hpp  state.hpp
src/include/httpserver_extension/http_handler/: authentication.hpp  bindings.hpp  common.hpp  handler.hpp  response_serializer.hpp
test/sql/: auth.test  basics.test  simple-get.test
test_http_api/: client.py  conftest.py  const.py  test_json_compact_all_types.py
test_http_api/responses/: all_types_compact.py
